[package]
name = "port_tester"
version = "0.1.0"
description = "A command line tool to test open ports."
categories = ["command-line-utilities", "network-programming"]
keywords = ["system", "port", "test", "check", "ping"]
authors = ["Chad Eldridge <chad.eldridge@gmail.com>"]
homepage = "https://github.com/chadeldridge/port-tester"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chadeldridge/port-tester"
readme = "README.md"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "pt"
path = "src/bin/pt/main.rs"
required-features = ["serde"]
test = false
doc = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.54", features = ["derive"] }
ctrlc = "3.5.1"
dns-lookup = "3.0.1"
env_logger = "0.11.8"
hostname-validator = "1.1.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
thiserror = "2.0.18"
ureq = "3.3.0"
